# Model-Trainer

./: .gitignore  Procfile  README.md  main.py  pyproject.toml
classifier/: gemini_service.py  training.py  urls.py  views.py
static/css/: style.css
static/js/: builder.js  train.js
templates/: index.html
trainer/: asgi.py  settings.py  urls.py  wsgi.py
