[project]
name = "model-trainer"
version = "0.1.0"
description = "Browser-based image classifier trainer powered by Django + PyTorch"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.0",
    "gunicorn>=25.1.0",
    "torch>=2.2",
    "torchvision>=0.17",
    "whitenoise>=6.11.0",
]
